@@ -26,7 +26,8 @@
     <name>bsp.master.address</name>
     <value>local</value>
     <description>The address of the bsp master server. Either the
-    literal string "local" or a host:port for distributed mode
+    literal string "local" or a host[:port] (where host is a name or
+    IP address) for distributed mode.
     </description>
   </property>
   <property>
