@@ -46,6 +46,8 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
     
+    HAMA-287: BSPMaster should use the bsp.master.port config property
+                       when creating its InetSocketAddr instance (Filipe Manana via edwardyoon)
     HAMA-283: Removing duplicate code (Filipe Manana via edwardyoon)
     HAMA-277: Add default number of bsp task (edwardyoon)
     HAMA-273: Implement killJob() method for local job (edwardyoon)
